--- a/parent/system/pom.xml
+++ b/parent/system/pom.xml
@@ -48,7 +48,11 @@
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>2.1.3</version>
     </dependency>
-    
+  
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
